<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="redes3.proyecto.nagiosalert.MainActivity" >

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#9AD3F1"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etContrasena"
		android:layout_alignStart="@+id/etContrasena"        
        android:layout_below="@+id/tvLogin"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/usuario" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
 		android:inputType="textPassword"        
        android:hint="@string/contrasena"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tvLogin"
        android:layout_marginBottom="81dp"
        android:onClick="goLogin"
        android:text="@string/loginMin" />

    <CheckBox
        android:id="@+id/cbRecordarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etContrasena"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/recordarDatos" />

    <Button
        android:id="@+id/btAjustes"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:textColor="#9AD3F1"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/ajustes" />

</RelativeLayout>