<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="redes3.proyecto.nagiosalert.MainActivity" >

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="#9AD3F1"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btIr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tvLogin"
        android:layout_marginBottom="81dp"
        android:onClick="goIr"
        android:text="@string/ir" />

<RadioGroup
    android:layout_width="200sp"
    android:layout_height="200sp"
    android:layout_above="@+id/btIr"
    android:layout_centerHorizontal="true" >

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/listadoServicio" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/verLog" />
</RadioGroup>

</RelativeLayout>